[gd_scene load_steps=62 format=2]

[ext_resource path="res://NPCs/BladeBoss/normalBoss-Sheet.png" type="Texture" id=1]
[ext_resource path="res://UI/DialogBox/DialogFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPCs/BladeBoss/BladeBoss.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 10.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool enableDeathShader = false;
uniform bool enableSuper = false;
uniform bool enableDeathEnd = true;

void fragment()
{
	if(enableDeathShader)
	{
		COLOR = texture(TEXTURE, UV);
		COLOR.r = 1f;
		COLOR.g = 1f;
		COLOR.b = 1f;
	}
	else if(enableDeathEnd)
	{
		COLOR = texture(TEXTURE, UV);
		COLOR.a = 0f;
	}
	else if(enableSuper)
	{
		COLOR = texture(TEXTURE, UV);
		COLOR.r = 1f;
		COLOR.b = 1f;
	}
	else
	{
		COLOR = texture(TEXTURE, UV);
	}

}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/enableDeathShader = false
shader_param/enableSuper = false
shader_param/enableDeathEnd = false

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/enableDeathShader")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:material:shader_param/enableSuper")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:material:shader_param/enableDeathEnd")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:doSpecial")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/enableDeathShader")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:material:shader_param/enableDeathEnd")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}

[sub_resource type="Animation" id=10]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.12, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=11]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=12]
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.14, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=13]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/enableSuper")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "throwShuriken"
} ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/enableSuper")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=16]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 7, 10 )

[sub_resource type="CapsuleShape2D" id=18]
radius = 11.0
height = 16.0

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "battleReady"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "qAttack1"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "qAttack2"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "qAttack3"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "super"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "superWait"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "throw"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "throwWait"

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=56]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=57]
states/Idle/node = SubResource( 19 )
states/Idle/position = Vector2( 270, 96 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 692, 58 )
states/battleReady/node = SubResource( 21 )
states/battleReady/position = Vector2( 518, 96 )
states/death/node = SubResource( 22 )
states/death/position = Vector2( 766, 240.772 )
states/jump/node = SubResource( 23 )
states/jump/position = Vector2( 793, 145 )
states/qAttack1/node = SubResource( 24 )
states/qAttack1/position = Vector2( 625, -56.228 )
states/qAttack2/node = SubResource( 25 )
states/qAttack2/position = Vector2( 879, -50.228 )
states/qAttack3/node = SubResource( 26 )
states/qAttack3/position = Vector2( 1110, -40.228 )
states/super/node = SubResource( 27 )
states/super/position = Vector2( 1175, 182 )
states/superWait/node = SubResource( 28 )
states/superWait/position = Vector2( 996, 116 )
states/throw/node = SubResource( 29 )
states/throw/position = Vector2( 972, 52 )
states/throwWait/node = SubResource( 30 )
states/throwWait/position = Vector2( 1198, 52 )
transitions = [ "Idle", "battleReady", SubResource( 31 ), "battleReady", "Run", SubResource( 32 ), "battleReady", "jump", SubResource( 33 ), "Run", "jump", SubResource( 34 ), "jump", "Run", SubResource( 35 ), "jump", "superWait", SubResource( 36 ), "superWait", "super", SubResource( 37 ), "Run", "throw", SubResource( 38 ), "throw", "throwWait", SubResource( 39 ), "throwWait", "throw", SubResource( 40 ), "throw", "Run", SubResource( 41 ), "Run", "qAttack1", SubResource( 42 ), "Run", "qAttack2", SubResource( 43 ), "Run", "qAttack3", SubResource( 44 ), "qAttack3", "Run", SubResource( 45 ), "qAttack2", "Run", SubResource( 46 ), "qAttack1", "Run", SubResource( 47 ), "qAttack1", "qAttack2", SubResource( 48 ), "qAttack2", "qAttack1", SubResource( 49 ), "qAttack2", "qAttack3", SubResource( 50 ), "qAttack3", "qAttack2", SubResource( 51 ), "qAttack1", "qAttack3", SubResource( 52 ), "qAttack3", "qAttack1", SubResource( 53 ), "jump", "death", SubResource( 54 ), "super", "jump", SubResource( 55 ), "battleReady", "throw", SubResource( 56 ) ]
start_node = "Idle"
end_node = "death"
graph_offset = Vector2( 127, -79.228 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=58]

[node name="BladeBoss" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )
hframes = 33
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/battleReady = SubResource( 7 )
anims/death = SubResource( 8 )
anims/jump = SubResource( 9 )
anims/qAttack1 = SubResource( 10 )
anims/qAttack2 = SubResource( 11 )
anims/qAttack3 = SubResource( 12 )
anims/super = SubResource( 13 )
anims/superWait = SubResource( 14 )
anims/throw = SubResource( 15 )
anims/throwWait = SubResource( 16 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 27, 0 )
shape = SubResource( 17 )
disabled = true

[node name="Enemy_BossHbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_BossHbox"]
shape = SubResource( 18 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 57 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 58 )

[node name="DialogFrame" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -132, -97 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
